minor grammar checks - need to check in previewer before merging

--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -16,7 +16,7 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-Once you have been on-boarded on to Bridge as an aggregator and business formalities have been completed, you can proceed to integrate UMAP APIs with your internal systems. First, you have to create a merchant and then enable products that the merchant can use.
+Once you have been onboarded on to Bridge as an aggregator and business formalities have been completed, you can proceed to integrate UMAP APIs with your internal systems. First, you have to create a merchant and then enable products that the merchant can use.
 
 <hr class="primary" />
 
