--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -12,7 +12,7 @@ UPI mandates is a recurring payments product built on the same rails of UPI whic
 ### What can you do with UPI mandates?
 Choose one or more of our products under the UMAP mandates stack to—
 * Enable limited stock purchases like IPO investments on your wealth app
-* Create seamless subcsriptions for your services directly from UPI apps
+* Create seamless subscriptions for your services directly from UPI apps
 * Reimagine **cash on delivery** or **try and buy** with single block multi debits
 
 ###### Explore our mandate products
