--- a/content/payments/umap/mandates/generic.mdx
+++ b/content/payments/umap/mandates/generic.mdx
@@ -6,13 +6,13 @@ visible_in_sidebar: true
 ---
 
 ## Mandate operations
-A UPI mandate itself is not a transaction, but rather a standing instruction on the basis of which transactions are carried out. Therefore, a status of a mandate can change, just like updating an agreement between two parties. 
+A UPI mandate itself is not a transaction, but rather a standing instruction on the basis of which transactions are carried out. Therefore, the status of a mandate can change, just like updating an agreement between two parties. 
 
 There are four main operations that can happen on a UPI mandate after creation—
 - <a href="/payments/umap/mandates/generic/update" target="_self">Updating a mandate ↗</a>
 - <a href="/payments/umap/mandates/generic/revoke" target="_self">Revoking a mandate ↗</a>
 - <a href="/payments/umap/mandates/generic/pause" target="_self">Pausing a mandate ↗</a>
-- <a href="/payments/umap/mandates/generic/unpause" target="_self">Un-pausing a paused mandate ↗</a>
+- <a href="/payments/umap/mandates/generic/unpause" target="_self">Unpausing a paused mandate ↗</a>
 
 <hr class="primary" />
 
