--- a/content/payments/umap/mandates/recur.mdx
+++ b/content/payments/umap/mandates/recur.mdx
@@ -18,7 +18,7 @@ visible_in_sidebar: true
 
 #### What is a recurring mandate ?
 
-A recurring mandate is a mandate that that can be executed / debited multiple times as per the recurrence pattern configured / agreed upon during mandate creation.
+A recurring mandate is a mandate that can be executed / debited multiple times as per the recurrence pattern configured / agreed upon during mandate creation.
 
 #### What can I do with a recurring mandate ?
 
@@ -35,7 +35,7 @@ Recurring mandates help merchants seamless collect money multiple times with a s
 The first step to collect a payment via a recurring mandate is for the **merchant** to create a recurring mandate. There are 2 ways in which a recurring mandate can be created:<br/><br/>
 **Intent based :** Intent based mandates are always initiated by user through merchant app or by scanning a QR code.
 
-**Collect based** Collect based mandates are initated by merchant by taking user's VPA as an input and creating a request.
+**Collect based** Collect based mandates are initiated by merchant by taking user's VPA as an input and creating a request.
 
 <Tabs
     tabs={[
