--- a/content/payments/umap/mandates/reserve-plus.mdx
+++ b/content/payments/umap/mandates/reserve-plus.mdx
@@ -34,7 +34,7 @@ Single block multi-debit mandates combines the simplicity of wallets with the co
 
 ### How it works
 
-These are the steps involved in collecting a payment from a customer via an intent based single block multi debit mandate.
+These are the steps involved in collecting a payment from a customer via an intent based single block multi-debit mandate.
 
 <hr class="tertiary" />
 
