--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -24,7 +24,7 @@ visible_in_sidebar: true
 
 #### Steps to on-board a merchant
 
-An **aggregator** can seamlessly on-board merchants onto the UMAP ecosystem, and enable them to start accepting UPI payments. This journey starts from collecting a merchant’s business details, setting up their configuration and as the final step activation of the merchant’s ability to process transactions.
+An **aggregator** can seamlessly on-board merchants onto the UMAP ecosystem, and enable them to start accepting UPI payments. This journey starts from collecting a merchant’s business details, setting up their configuration and, as the final step activation of the merchant’s ability to process transactions.
 
 <hr class="tertiary" />
 
