--- a/content/payments/umap/notifications/disputes.mdx
+++ b/content/payments/umap/notifications/disputes.mdx
@@ -24,7 +24,7 @@ The UMAP platform's seamless integration with the UDIR framework ensures that me
 The statuses are consistent across all UMAP products—
 <Text>
     <ul>
-        <li><code>Dispute.open</code>&nbsp;A dispute has been raised by a customer, against a payment they did before</li>
+        <li><code>Dispute.open</code>&nbsp;A dispute has been raised by a customer, against a payment they made previously</li>
         <li><code>Dispute.closed</code>&nbsp;The merchant has accepted the dispute claim from customer, and issued a refund</li>
         <li><code>Dispute.in-review</code>&nbsp;The merchant has contested the dispute claim from customer, and provided evidence of goods/service delivery</li>
         <li><code>Dispute.won</code>&nbsp;Merchant evidence is accepted and no refund is required</li>
