--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -15,9 +15,9 @@ visible_in_sidebar: true
 <hr class="primary" />
 
 ### Details for mandate statuses
-Below is a list mandate statuses that are uniform across all types of mandates. Notifications corresponding to them are sent after relevant operations are taken on the mandate by either a merchant, or their customer.
+UMAP provides consistent and transparent statuses for mandate processing. These statuses help merchants track the life cycle of a mandate request.
 
-Here is the expected life-cycle of a mandate—
+Here is the expected life cycle of a mandate—
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/mandate_base_diagram/mandate_base_diagram.svg"
     alt="Bridge"
@@ -29,8 +29,8 @@ A quick summary of the general statuses associated with a mandate—
         <li><code>mandate.initiated</code>{" "}A customer or merchant has initiated creation of mandate</li>
         <li><code>mandate.live</code>{" "}Customer has authorised the mandate, and the mandate is active</li>
         <li><code>mandate.rejected</code>{" "}The mandate could not be set up, due to some error or due to the customer not authorising the mandate</li>
-        <li><code>mandate.paused</code>{" "}The customer has decided to pause executions for mandate, which can be temporary</li>
-        <li><code>mandate.unpaused</code>{" "}The customer has decided to unpause executions for mandate, and mandate is active again</li>
+        <li><code>mandate.paused</code>{" "}The customer has decided to pause executions for the mandate, which can be temporary</li>
+        <li><code>mandate.unpaused</code>{" "}The customer has decided to unpause executions for the mandate, and the mandate is active again</li>
         <li><code>mandate.revoked</code>{" "}The customer has decided to stop executions for mandate before its expiry—this is a permanent action, and payments from this customer would need a new mandate to be set up</li>
         <li><code>mandate.complete</code>{" "}All mandate executions are complete</li>
     </ul>
