--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -13,7 +13,7 @@ UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite desi
 
 UMAP connects directly with NPCI, absorbing both acquirer and beneficiary bank sides of the transaction to provide a seamless UPI-first product experience to our customers.
 
-_<Text size="small">Unified Payments Interface (UPI) is a digital payment system developed by NPCI that enables customers to pay for goods and services real-time, across any UPI app with different payment methods—like savings accounts or credit cards—from the convenience of their phone.</Text>_
+_<Text size="small">Unified Payments Interface (UPI) is a digital payment system developed by NPCI that enables customers to pay for goods and services in real-time, across any UPI app with different payment methods—like savings accounts or credit cards—from the convenience of their phone.</Text>_
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank.png"
