--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -12,8 +12,8 @@ Unified Payments Interface (UPI) is a real-time payment system developed by the 
 ### What can you do with this product?
 Choose one or more of our products under the UMAP Payments stack to—
 
-- Re-target churning D2C customers with payment links in messaging campaigns
-- Enable web-based checkouts by using a customer VPA input on your website to trigger a collection flow
+- Retarget churning D2C customers with payment links in messaging campaigns
+- Enable web-based checkouts using a customer VPA input on your website to trigger a collection flow
 - Use Third Party Validation (TPV) to verify customer details and remain compliant
 
 ###### Explore our payment products
