--- a/content/payments/umap/payments/collect.mdx
+++ b/content/payments/umap/payments/collect.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Callout type="warning">
   ⚠️{" "}
   <strong>
-    Collect Flow is scheduled to be depreciated as per NPCI recommendation
+    Collect Flow is scheduled to be deprecated as per NPCI recommendation
   </strong>
 </Callout>
 
@@ -22,7 +22,7 @@ The collect request in UPI is a customer-driven payment mode where the merchant 
 
 ### Step 1 - Verify customer VPA (optional)
 
-In collect, a merchant needs to accept customer vpa as input to create a collect request at customer’s UPI app. The merchant can verify the validity of the vpa input my the customer using this API.
+In collect, a merchant needs to accept customer vpa as input to create a collect request at customer’s UPI app. The merchant can verify the validity of the vpa input by the customer using this API.
 
 <a
   href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"
