--- a/content/payments/umap/payments/flash.mdx
+++ b/content/payments/umap/payments/flash.mdx
@@ -13,9 +13,9 @@ Merchants can offer their customers a seamless payment experience by utilizing U
 
 ### Step 1 - Create a QR
 
-In the QR flow, a merchant generates an intent link which can be directly sent to customers, integrated to merchant app or coverted into a QR code which can be scanned by user's UPI app. You can create two types of QR a Dynamic QR and a Static QR.
+In the QR flow, a merchant generates an intent link which can be directly sent to customers, integrated to merchant app or converted into a QR code which can be scanned by user's UPI app. You can create two types of QR a Dynamic QR and a Static QR.
 
-- `DQR` — can be paid to only once, this is in cases where a one time session based payment is collected. A dynamic QR provides lot more context about the payment than an Static QR, like the amount, transaction note and metadata
+- `DQR` — can be paid to only once, this is in cases where a one time session based payment is collected. A dynamic QR provides lot more context about the payment than an Static QR, such as amount, transaction note and metadata
 
 <a
   href="/payments/umap/api-reference#/category~payment-link/operation~dqr#create"
