--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -13,7 +13,7 @@ This guide is for you to get started quickly with UMAP, and to select the combin
 
 #### What can I do with UMAP?
 
-UMAP caters to two specific categories of businesses—**Aggregators** and **Merchants**. Before you dive into UMAP product suite, explore which category you belong to.
+UMAP serves two specific business categories of **Aggregators** and **Merchants**. Before you dive into UMAP product suite, explore which category you belong to.
 
 <Row>
     <Portion desktopSpan="half" tabletLandscapeSpan="half" tabletPortraitSpan="half">
@@ -24,7 +24,7 @@ UMAP caters to two specific categories of businesses—**Aggregators** and **Mer
                     A food delivery app that onboards multiple restaurants, and enabled delivery services for them.
                 </li>
                 <li>
-                    Website creation platform with a storefront, that plugin providers can integrate with.
+                    Website creation platforms with storefronts, that plugin providers can integrate with.
                 </li>
                 <li>
                     Insurance and loan marketplaces that can be used by any distributors to sell to customers.
