--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -28,7 +28,7 @@ An aggregator on UMAP is a large merchant platform that on-boards multiple merch
 
 ###### Step 1 — Start KYC and business documentation
 
-As an aggregator, the first step for you is to interact with Setu’s sales team to determine the solution that will best meet your needs. Right after that, we will start collecting business KYC details and finalise commerical agreements. After business formalities are over, Setu will create an aggregator account and you can start creating merchants to offer UPI products to them.
+As an aggregator, the first step for you is to interact with Setu’s sales team to determine the solution that will best meet your needs. Right after that, we will start collecting business KYC details and finalize commerical agreements. After business formalities are over, Setu will create an aggregator account and you can start creating merchants to offer UPI products to them.
 
 <Callout type="tip">
     For custom configurations for your business, reach out to{" "}
