--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -20,7 +20,7 @@ This guide will help you get started with UMAP integration as a **merchant**.
 
 #### Who is a merchant?
 
-A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI Mandates for setting up recurring payments like subscriptions with their customers.
+A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods and services or use UPI Mandates for setting up recurring payments like subscriptions with their customers.
 
 <hr class="primary" />
 
@@ -28,7 +28,7 @@ A merchant on UMAP is any business that wants to collect UPI payments from their
 
 ###### Step 1 - Register on Bridge
 
-As a merchant, you can integrate with UMAP by directly registering on Setu's Bridge, which is the dashboard for all UPI products used by you. You can configure your payment methods, VPAs, settlements details, notifications and more directly from Bridge.
+As a merchant, you can integrate with UMAP by directly registering on Setu's Bridge, which is the dashboard for all UPI products used by you. You can configure your payment methods, VPAs, settlement details, notifications and more directly from Bridge.
 
 <hr class="tertiary" />
 
