--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -46,9 +46,8 @@ In addition to notifications, merchants can also use the <a href="/payments/umap
 
 **Refund statuses**
 - `refund_initiated` Refund request has been
-create at UMAP
-- `refund_pending` Refund is in queue for
-    being processed
+created at UMAP
+- `refund_pending` Refund is in queue for processing
 - `refund_successful` Refund has been
 successfully completed
 - `refund_failed` Refund could not be
