--- a/content/payments/umap/mandates/one-shot.mdx
+++ b/content/payments/umap/mandates/one-shot.mdx
@@ -18,7 +18,7 @@ visible_in_sidebar: true
 
 #### What is a one-time mandate ?
 
-A one time mandate a mandate that can be executed only once at a later date after taking user consent. One time mandates are very useful for conditional flows like:
+A one time mandate is a mandate that can be executed only once at a later date after taking user consent. One time mandates are very useful for conditional flows like:
 
 - IPO mandates that are executed only on allotment of shares
 - Transit systems that debit funds only if ticket is confirmed
@@ -32,7 +32,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
 
 **Intent based :** Intent based mandates are always initiated by user through merchant app or by scanning a QR code.
 
-**Collect based** Collect based mandates are initated by merchant by taking user's VPA as an input and creating a request.
+**Collect based** Collect based mandates are initiated by merchant by taking user's VPA as an input and creating a request.
 
 <Tabs
     tabs={[
