--- a/content/payments/umap/notifications/refunds.mdx
+++ b/content/payments/umap/notifications/refunds.mdx
@@ -15,12 +15,12 @@ visible_in_sidebar: true
 <hr class="primary" />
 
 ### Details for refund statuses
-UMAP equips merchants with a straightforward API-based mechanism. to process refunds directly to the customer's bank account that was originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution. 
+UMAP equips merchants with a straightforward API-based mechanism to process refunds directly to the customer's bank account that was originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution. 
 
 The statuses are consistent across all UMAP products—
 <Text>
     <ul>
-        <li><code>refund.initiated</code>&nbsp;Refund request has been create at UMAP</li>
+        <li><code>refund.initiated</code>&nbsp;Refund request has been created at UMAP</li>
         <li><code>refund.pending</code>&nbsp;Refund is in queue to be processed</li>
         <li><code>refund.successful</code>&nbsp;Refund has been successfully completed</li>
         <li><code>refund.failed</code>&nbsp;Refund could not be processed</li>
