--- a/content/data/match-apis/name-match/examples.mdx
+++ b/content/data/match-apis/name-match/examples.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Name Match examples
+sidebar_title: Name Match Examples
 page_title: Name Match API response examples
 order: 3
 visible_in_sidebar: true
@@ -12,10 +12,10 @@ Below are some examples of the response you can expect from the Name Match API. 
 <table>
   <tbody>
     <tr>
-      <th>Input scenario</th>
-      <th>Sample input</th>
-      <th>Optimistic result</th>
-      <th>Pessimistic result</th>
+      <th><strong>Input scenario</strong></th>
+      <th><strong>Sample input</strong></th>
+      <th><strong>Optimistic result</strong></th>
+      <th><strong>Pessimistic result</strong></th>
     </tr>
     <tr>
       <th>Names are exactly the same</th>
