--- a/content/data/match-apis/name-match/overview.mdx
+++ b/content/data/match-apis/name-match/overview.mdx
@@ -12,7 +12,7 @@ It helps financial institutions comply with regulatory requirements like AML, en
 
 ### What is Setu Name Match API?
 
-The Setu Name Match API utilizes name-matching algorithms to accurately recognize variations of similar names from multiple sources. 
+The Setu Name Match API utilizes name-matching algorithms to accurately recognize variations of a person's name fetched from multiple sources. 
 This allows organizations to make informed decisions on whether to accept or reject users during their onboarding process.
 
 <WasPageHelpful />
