--- a/content/data/match-apis/name-match/quickstart.mdx
+++ b/content/data/match-apis/name-match/quickstart.mdx
@@ -128,7 +128,8 @@ payload= {
                         </td>
                     </tr>
                 </table>
-                <p>To get started, you can set a threshold between 70% and 75% when testing the API, and adjust the threshold according to your preference.</p>
+                <br></br>
+                <p>To get started, you can set a threshold between 70% and 75% when testing the API, and adjust the threshold according to your preference. You can also directly consume the match type.</p>
             </>
           ),
         },
