umap: content update for payments
changes
- fix typos and issues with payment notification payload

--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -59,7 +59,7 @@ In addition to these attributes, based on the `eventType` more attributes get ad
 
 ### Subscribing to events
 
-A Merchant can recieve status updates by registering a callback URL and subscribing certain events under it. Though merchants can configure any number of callback URLs, an event can be subscribed to only once at a mechant level.
+A Merchant can recieve status updates by registering a callback URL and subscribing certain events under it. Though merchants can configure any number of callback URLs, an event can be subscribed to only once at a merchant level.
 
 **<a href="/payments/umap/api-reference#/category~notificationConfig/operation~notificationConfig#create" target="_self">Register a callback ↗</a>**
 
