Update sandbox auth URLs

--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -45,7 +45,7 @@ Each of these steps are described in detail below.
 
 You have to use `X-PARTNER-ID` in the auth header and `clientID` and `secret` as the bearer token. Get these values by reaching out to the Setu team at <a href="">onboarding@setu.co</a>.
 
-Once you have the credentials, get the token by making a `POST` request to `https://sandbox-kabini-coudc.setu.co/api/v1/auth/token`.
+Once you have the credentials, get the token by making a `POST` request to `https://sandbox-coudc.setu.co/api/v1/auth/token`.
 
 <CodeBlockWithCopy language="json">{`
 {
