Update order and titles

--- a/content/data/match-apis/name-match/api-reference.mdx
+++ b/content/data/match-apis/name-match/api-reference.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Name Match API reference
+sidebar_title: API reference
 page_title: Name Match API reference
 order: 4
 visible_in_sidebar: true
