--- a/content/data/match-apis/name-match/examples.mdx
+++ b/content/data/match-apis/name-match/examples.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Name Match Examples
+sidebar_title: Examples
 page_title: Name Match API response examples
 order: 3
 visible_in_sidebar: true
@@ -12,10 +12,18 @@ Below are some examples of the response you can expect from the Name Match API. 
 <table>
   <tbody>
     <tr>
-      <th><strong>Input scenario</strong></th>
-      <th><strong>Sample input</strong></th>
-      <th><strong>Optimistic result</strong></th>
-      <th><strong>Pessimistic result</strong></th>
+      <th>
+        <strong>Input scenario</strong>
+      </th>
+      <th>
+        <strong>Sample input</strong>
+      </th>
+      <th>
+        <strong>Optimistic result</strong>
+      </th>
+      <th>
+        <strong>Pessimistic result</strong>
+      </th>
     </tr>
     <tr>
       <th>Names are exactly the same</th>
@@ -23,12 +31,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Rakesh Kumar Singh, Rakesh Kumar Singh</p>
       </td>
       <td>
-        <p>Match Percentage: <code>100%</code></p>
-        <p>Match Type: <code>COMPLETE_MATCH</code></p>
+        <p>
+          Match Percentage: <code>100%</code>
+        </p>
+        <p>
+          Match Type: <code>COMPLETE_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>100%</code></p>
-        <p>Match Type: <code>COMPLETE_MATCH</code></p>
+        <p>
+          Match Percentage: <code>100%</code>
+        </p>
+        <p>
+          Match Type: <code>COMPLETE_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -37,12 +53,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Rakesh Kumar Singh, Rakesh Kumar Singh</p>
       </td>
       <td>
-        <p>Match Percentage: <code>100%</code></p>
-        <p>Match Type: <code>COMPLETE_MATCH</code></p>
+        <p>
+          Match Percentage: <code>100%</code>
+        </p>
+        <p>
+          Match Type: <code>COMPLETE_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>100%</code></p>
-        <p>Match Type: <code>COMPLETE_MATCH</code></p>
+        <p>
+          Match Percentage: <code>100%</code>
+        </p>
+        <p>
+          Match Type: <code>COMPLETE_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -51,12 +75,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Mr. Rakesh Kumar Singh, Rakesh Kumar Singh</p>
       </td>
       <td>
-        <p>Match Percentage: <code>100%</code></p>
-        <p>Match Type: <code>COMPLETE_MATCH</code></p>
+        <p>
+          Match Percentage: <code>100%</code>
+        </p>
+        <p>
+          Match Type: <code>COMPLETE_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>100%</code></p>
-        <p>Match Type: <code>COMPLETE_MATCH</code></p>
+        <p>
+          Match Percentage: <code>100%</code>
+        </p>
+        <p>
+          Match Type: <code>COMPLETE_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -65,12 +97,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Rakesh K Singh, Rakesh Kumar Singh</p>
       </td>
       <td>
-        <p>Match Percentage: <code>95%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>95%</code>
+        </p>
+        <p>
+          Match Type: <code>HIGH_PARTIAL_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>90%</code>
+        </p>
+        <p>
+          Match Type: <code>HIGH_PARTIAL_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -79,26 +119,44 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Ashok Kumar Ganguly, A K Ganguly</p>
       </td>
       <td>
-        <p>Match Percentage: <code>95%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>95%</code>
+        </p>
+        <p>
+          Match Type: <code>HIGH_PARTIAL_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>90%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>90%</code>
+        </p>
+        <p>
+          Match Type: <code>HIGH_PARTIAL_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
-      <th>One of the names contains only initials, full name given in the other</th>
+      <th>
+        One of the names contains only initials, full name given in the other
+      </th>
       <td>
         <p>R K S, Rakesh Kumar Singh</p>
       </td>
       <td>
-        <p>Match Percentage: <code>43.48%</code></p>
-        <p>Match Type: <code>NO_MATCH</code></p>
+        <p>
+          Match Percentage: <code>43.48%</code>
+        </p>
+        <p>
+          Match Type: <code>NO_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>27.78%</code></p>
-        <p>Match Type: <code>NO_MATCH</code></p>
+        <p>
+          Match Percentage: <code>27.78%</code>
+        </p>
+        <p>
+          Match Type: <code>NO_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -107,12 +165,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Anita Kumari, Ankita Kumari</p>
       </td>
       <td>
-        <p>Match Percentage: <code>90.91%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>90.91%</code>
+        </p>
+        <p>
+          Match Type: <code>HIGH_PARTIAL_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>83.33%</code></p>
-        <p>Match Type: <code>MODERATE_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>83.33%</code>
+        </p>
+        <p>
+          Match Type: <code>MODERATE_PARTIAL_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -121,12 +187,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Prakash Kumar Chowdhury, Prakash Chowdhury</p>
       </td>
       <td>
-        <p>Match Percentage: <code>85%</code></p>
-        <p>Match Type: <code>HIGH_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>85%</code>
+        </p>
+        <p>
+          Match Type: <code>HIGH_PARTIAL_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>73.71%</code></p>
-        <p>Match Type: <code>MODERATE_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>73.71%</code>
+        </p>
+        <p>
+          Match Type: <code>MODERATE_PARTIAL_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -135,12 +209,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Prakash Kumar Chowdhury, Chowdhury Kumar Prakash</p>
       </td>
       <td>
-        <p>Match Percentage: <code>100%</code></p>
-        <p>Match Type: <code>COMPLETE_MATCH</code></p>
+        <p>
+          Match Percentage: <code>100%</code>
+        </p>
+        <p>
+          Match Type: <code>COMPLETE_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>83.33%</code></p>
-        <p>Match Type: <code>MODERATE_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>83.33%</code>
+        </p>
+        <p>
+          Match Type: <code>MODERATE_PARTIAL_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -149,12 +231,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Prakash Kumar Agarwal, Amita Agarwal</p>
       </td>
       <td>
-        <p>Match Percentage: <code>58.82%</code></p>
-        <p>Match Type: <code>LOW_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>58.82%</code>
+        </p>
+        <p>
+          Match Type: <code>LOW_PARTIAL_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>47.62%</code></p>
-        <p>Match Type: <code>LOW_PARTIAL_MATCH</code></p>
+        <p>
+          Match Percentage: <code>47.62%</code>
+        </p>
+        <p>
+          Match Type: <code>LOW_PARTIAL_MATCH</code>
+        </p>
       </td>
     </tr>
     <tr>
@@ -163,12 +253,20 @@ Below are some examples of the response you can expect from the Name Match API. 
         <p>Prakash Kumar Chowdhury, Ram Prasad Singh</p>
       </td>
       <td>
-        <p>Match Percentage: <code>35.9%</code></p>
-        <p>Match Type: <code>NO_MATCH</code></p>
+        <p>
+          Match Percentage: <code>35.9%</code>
+        </p>
+        <p>
+          Match Type: <code>NO_MATCH</code>
+        </p>
       </td>
       <td>
-        <p>Match Percentage: <code>30.43%</code></p>
-        <p>Match Type: <code>NO_MATCH</code></p>
+        <p>
+          Match Percentage: <code>30.43%</code>
+        </p>
+        <p>
+          Match Type: <code>NO_MATCH</code>
+        </p>
       </td>
     </tr>
   </tbody>
