--- a/content/data/match-apis/name-match/overview.mdx
+++ b/content/data/match-apis/name-match/overview.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Name Match API Overview
+sidebar_title: Overview
 page_title: Name Match API overview
 order: 1
 visible_in_sidebar: true
@@ -7,12 +7,12 @@ visible_in_sidebar: true
 
 ## Name Match API Overview
 
-The Name Match API, when utilised in KYC verification, ensures accurate identity verification, detects errors and variations in names, and prevents identity fraud. 
+The Name Match API, when utilised in KYC verification, ensures accurate identity verification, detects errors and variations in names, and prevents identity fraud.
 It helps financial institutions comply with regulatory requirements like AML, enhances customer trust, and improves the efficiency and reliability of the verification process.
 
 ### What is Setu Name Match API?
 
-The Setu Name Match API utilizes name-matching algorithms to accurately recognize variations of a person's name fetched from multiple sources. 
+The Setu Name Match API utilizes name-matching algorithms to accurately recognize variations of a person's name fetched from multiple sources.
 This allows organizations to make informed decisions on whether to accept or reject users during their onboarding process.
 
 <WasPageHelpful />
