--- a/content/data/match-apis/name-match/quickstart.mdx
+++ b/content/data/match-apis/name-match/quickstart.mdx
@@ -1,18 +1,20 @@
 ---
-sidebar_title: Name Match Quickstart
+sidebar_title: Quickstart
 page_title: Name Match API quickstart
 order: 2
 visible_in_sidebar: true
 ---
 
-##  Name Match V1 API Quickstart
+## Name Match V1 API Quickstart
 
 ### How is Setu Name Match API designed?
-The Setu Name Match API employs multiple backend algorithms to account for a wide range of name and identity variations commonly found in financial services. 
+
+The Setu Name Match API employs multiple backend algorithms to account for a wide range of name and identity variations commonly found in financial services.
 The API provides both optimistic and pessimistic match percentages for a given input, allowing organizations to choose the appropriate match based on their internal policies.
 
 #### What is the difference between optimistic and pessimistic results?
-We provide two results, an optimistic and pessimistic one, in order to allow the user to choose which result to use based on their risk policy. In the optimistic result, cases such as missing first/middle/last name, mis-spelt/out of order names are not penalised heavily. 
+
+We provide two results, an optimistic and pessimistic one, in order to allow the user to choose which result to use based on their risk policy. In the optimistic result, cases such as missing first/middle/last name, mis-spelt/out of order names are not penalised heavily.
 In the pessimistic output, these scenarios are penalised more heavily, leading to lower match percentages/types. However, it is not necessary for optimistic and pessimistic results to always be different.
 
 ### Steps to integrate
@@ -29,12 +31,12 @@ Contact Setu to receive x-client-id, x-client-secret and x-product-instance-id d
 
 The URLs you would need for this API—
 
--   Sandbox—`https://dg-sandbox.setu.co`
--   Production—`https://dg.setu.co`
--   Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
-    -   `x-client-id`
-    -   `x-client-secret`
-    -   `x-product-instance-id`
+- Sandbox—`https://dg-sandbox.setu.co`
+- Production—`https://dg.setu.co`
+- Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
+  - `x-client-id`
+  - `x-client-secret`
+  - `x-product-instance-id`
 
 <hr className="primary" />
 
@@ -68,8 +70,10 @@ payload= {
               <hr className="tertiary" />
               <h5>Response</h5>
               <p>
-                You will get a unique <code>id</code> for each request, along with an optimistic and pessimistic match output.
-                Both the optimistic and pessimistic match outputs will have a <code>match_type</code> and <code>match_percentage</code>.
+                You will get a unique <code>id</code> for each request, along
+                with an optimistic and pessimistic match output. Both the
+                optimistic and pessimistic match outputs will have a{" "}
+                <code>match_type</code> and <code>match_percentage</code>.
               </p>
               <CodeBlockWithCopy language="json">
                 {`{
@@ -87,49 +91,56 @@ payload= {
     "traceId": "1-6690d779-00bd76895fc117162acba45f"
 } `}
               </CodeBlockWithCopy>
-              <p>The <code>match_type</code> is based on the percentage thresholds shown below:</p>
+              <p>
+                The <code>match_type</code> is based on the percentage
+                thresholds shown below:
+              </p>
               <table>
-                    <tr>
-                        <th>
-                            <strong>Match Percentage</strong>
-                        </th>
-                        <th>
-                            <strong>Match Type</strong>
-                        </th>
-                    </tr>
-                    <tr>
-                        <td>99% - 100%</td>
-                        <td>
-                            <code>COMPLETE_MATCH</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>85% - 99%</td>
-                        <td>
-                            <code>HIGH_PARTIAL_MATCH</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>70% - 85%</td>
-                        <td>
-                            <code>MODERATE_PARTIAL_MATCH</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>45% - 70%</td>
-                        <td>
-                            <code>LOW_PARTIAL_MATCH</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>0% - 45%</td>
-                        <td>
-                            <code>NO_MATCH</code>
-                        </td>
-                    </tr>
-                </table>
-                <br></br>
-                <p>To get started, you can set a threshold between 70% and 75% when testing the API, and adjust the threshold according to your preference. You can also directly consume the match type.</p>
+                <tr>
+                  <th>
+                    <strong>Match Percentage</strong>
+                  </th>
+                  <th>
+                    <strong>Match Type</strong>
+                  </th>
+                </tr>
+                <tr>
+                  <td>99% - 100%</td>
+                  <td>
+                    <code>COMPLETE_MATCH</code>
+                  </td>
+                </tr>
+                <tr>
+                  <td>85% - 99%</td>
+                  <td>
+                    <code>HIGH_PARTIAL_MATCH</code>
+                  </td>
+                </tr>
+                <tr>
+                  <td>70% - 85%</td>
+                  <td>
+                    <code>MODERATE_PARTIAL_MATCH</code>
+                  </td>
+                </tr>
+                <tr>
+                  <td>45% - 70%</td>
+                  <td>
+                    <code>LOW_PARTIAL_MATCH</code>
+                  </td>
+                </tr>
+                <tr>
+                  <td>0% - 45%</td>
+                  <td>
+                    <code>NO_MATCH</code>
+                  </td>
+                </tr>
+              </table>
+              <br></br>
+              <p>
+                To get started, you can set a threshold between 70% and 75% when
+                testing the API, and adjust the threshold according to your
+                preference. You can also directly consume the match type.
+              </p>
             </>
           ),
         },
@@ -228,7 +239,7 @@ payload= {
               </CodeBlockWithCopy>
             </>
           ),
-        }
+        },
       ]}
     ></Tabs>
   </Portion>
