--- a/content/data/match-apis/name-match/overview.mdx
+++ b/content/data/match-apis/name-match/overview.mdx
@@ -15,4 +15,12 @@ It helps financial institutions comply with regulatory requirements like AML, en
 The Setu Name Match API utilizes name-matching algorithms to accurately recognize variations of a person's name fetched from multiple sources.
 This allows organizations to make informed decisions on whether to accept or reject users during their onboarding process.
 
+<NextPage
+  info={{
+    description: "Name match quickstart",
+    slug: "/data/kyc/match-apis/name-match/quickstart",
+    title: "Quickstart",
+  }}
+/>
+
 <WasPageHelpful />
