--- a/content/data/match-apis/name-match/quickstart.mdx
+++ b/content/data/match-apis/name-match/quickstart.mdx
@@ -241,6 +241,16 @@ payload= {
           ),
         },
       ]}
-    ></Tabs>
+    />
   </Portion>
 </Row>
+
+<NextPage
+  info={{
+    description: "Name match examples",
+    slug: "/data/kyc/match-apis/name-match/examples",
+    title: "Examples",
+  }}
+/>
+
+<WasPageHelpful />
