--- a/content/data/match-apis/name-match/examples.mdx
+++ b/content/data/match-apis/name-match/examples.mdx
@@ -272,4 +272,12 @@ Below are some examples of the response you can expect from the Name Match API. 
   </tbody>
 </table>
 
+<NextPage
+  info={{
+    description: "Name match API reference",
+    slug: "/data/match-apis/name-match/api-reference",
+    title: "API reference",
+  }}
+/>
+
 <WasPageHelpful />
